# CodeReview_Lab1

./: CMakeLists.txt  README.md
1/: Task01.cpp  Task01.h  Task01Solution.cpp  Task01fixed.cpp  t.txt
2/: Task02.cpp  Task02.h  Task02Fixed.cpp  Task02Solution.cpp  a.txt  b.txt
3/: Task03.cpp  Task03.h  Task03Fixed.cpp  Task03Solution.cpp
4/: Task04.cpp  Task04.h  Task04Fixed.cpp  Task04Solution.cpp
