cmake_minimum_required(VERSION 3.30)
project(Lab1)

set(CMAKE_CXX_STANDARD 26)

add_executable(Lab1
        1/Task01.cpp
        1/Task01fixed.cpp
        1/Task01.h
        1/Task01Solution.cpp
        2/Task02.cpp
        2/Task02.h
        2/Task02Fixed.cpp
        2/Task02Solution.cpp
        3/Task03.cpp
        3/Task03Fixed.cpp
        3/Task03Solution.cpp
        3/Task03.h
        4/Task04.cpp
        4/Task04.h
        4/Task04Solution.cpp
        4/Task04Fixed.cpp
)
